[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = {version = "4.0.0", optional = true}
casper-types = "4.0.1"
hex = { version = "0.4.3", default-features = false }
casper_types_derive = "0.1.0"
casper-event-standard = "0.5.0"

[features]
test-support = ["casper-contract"]

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

